fixed styling issues on small screen size

--- a/src/Components/AboutSection/AboutSection.styles.scss
+++ b/src/Components/AboutSection/AboutSection.styles.scss
@@ -225,13 +225,19 @@
 }
 
 @media screen and (max-width: 450px) {
-  .about-wrapper > #img-cf {
+  .about-wrapper {
+    .paragraph-wrapper {
+      padding: 20px 30px;
+    }
+
+    #img-cf {
     margin: 150px 0;
+    }
   }
 }
 
 @media screen and (max-width: 375px) {
-  .about-wrapper > #img-cf > .portfolio-text {
+  .about-wrapper #img-cf .portfolio-text {
     font-size: 24px;
     letter-spacing: 10px;
   }
