--- a/src/Components/CarouselSlide/CarouselSlide.styles.scss
+++ b/src/Components/CarouselSlide/CarouselSlide.styles.scss
@@ -40,6 +40,7 @@
 
       .center {
         z-index: 5 !important;
+        padding-bottom: 18px;
 
         img {
           padding: 0;
@@ -47,8 +48,7 @@
       }
 
       .left {
-        transform: translate3d(-20%, -70px, 0px) !important;
-        opacity: 30%;
+        transform: translate3d(-20%, 0px, 0px) scale(0.78) !important;
 
         .image-gallery-description {
           display: none;
@@ -60,8 +60,7 @@
       }
 
       .right {
-        transform: translate3d(20%, -70px, 0px) !important;
-        opacity: 30%;
+        transform: translate3d(20%, 0px, 0px) scale(0.78) !important;
 
         .image-gallery-description {
           display: none;
@@ -93,29 +92,16 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
   .carousel-container .image-gallery {
+    width: 85%;
 
-    .links {
-      font-size: 24px;
-    }
-  }
-}
-
-@media screen and (max-width: 740px) {
-  .carousel-container .image-gallery {
-    width: 90%;
-  
     .image-gallery-content .image-gallery-slide-wrapper .image-gallery-icon {
-      top: 100%;
+      top: 104%;
     }
 
     .image-gallery-slides .image-gallery-description {
-        bottom: -30px;
-      }
-
-    .links {
-      font-size: 22px;
+        bottom: -50px;
     }
   } 
 }
@@ -124,7 +110,7 @@
   .carousel-container .image-gallery {
 
     .image-gallery-slides .image-gallery-description {
-        bottom: -20px;
+      bottom: -20px;
     }
 
     .links {
@@ -180,5 +166,11 @@
         right: 20%;
       }
     }
+  } 
+}
+
+@media screen and (max-width: 376px) {
+  .carousel-container .image-gallery {
+      height: 100%
   } 
 }
